tests/Rules/Structure/Fixtures/valid/area_with_alt.html.twig
<area href="#" alt="A map area">
