tests/Rules/Structure/Fixtures/invalid/anchor_empty.html.twig
<html>
<body>
<a href="#"><span class="icon"></span></a>
</body>
</html>
